ADM-639:[backend]refactor: refactor code small